--- a/config/settings.yml
+++ b/config/settings.yml
@@ -28,7 +28,15 @@ number:
   enought_to_pass: 0.8
 time:
   format1: "%H:%M:%S"
-  format: "%m/%d/%Y %H:%M"
+  format: "%m/%d/%Y - %H:%M"
 status_unlearn: "unlearned"
 status_learn: "learned"
 max_time: 300
+table:
+  status:
+    s0: "warning"
+    s1: "active"
+    s2: "success"
+    s3: "danger"
+path:
+  root: "/"
